Minor fix
